fix User Dropdown Menu z-index to 10 from 9999

--- a/src/index.css
+++ b/src/index.css
@@ -522,7 +522,7 @@ h1 {
 
 .MenuActionsLink {
   position: absolute;
-  z-index: 9999;
+  z-index: 10;
   left: -150px;
   top: 100%;
   width: 200px;
